--- a/Проект - копия/раб версия/myproject-ver_1/SignalRMvc/SignalRMvc/Views/Home/Index.cshtml
+++ b/Проект - копия/раб версия/myproject-ver_1/SignalRMvc/SignalRMvc/Views/Home/Index.cshtml
@@ -6,11 +6,17 @@
 <html>
 <head>
     <title>Chat</title>
+
     <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="~/Content/css/bootstrap-colorpicker.css" />
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap.js" type="text/javascript" ></script>
-    <script src="/Scripts/jquery-1.10.2.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="~/Content/emoticons/jquery.cssemoticons.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/themes/base/base.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/themes/base/theme.css" />
+
+    <script src="~/Scripts/jquery-2.2.1.js"></script>
+
+    <script src="~/Scripts/jquery.cssemoticons.js" type="text/javascript"></script>
+    <script src="~/Scripts/bootstrap.js" type="text/javascript" ></script>
     <!--Ссылка на библиотеку SignalR -->
     <script src="/Scripts/jquery.signalR-2.2.0.min.js"></script>
     <!--Ссылка на автоматически сгенерированный скрипт хаба SignalR -->
@@ -18,38 +24,42 @@
     <script src="/Scripts/DrawFigure.js"> </script>
     <script src="~/Scripts/util.js"></script>
     <script src="~/Scripts/tinymce/jquery.tinymce.min.js" type="text/javascript"></script>
-    <script src="~/Scripts/tinymce/tiny_mce.js" type="text/javascript"></script>
     <script src="~/Scripts/tinymce/tinymce.js" type="text/javascript"></script>
     <script src="~/Scripts/tinymce/tinymce.min.js" type="text/javascript"></script>
     <script src="~/Scripts/moment-with-locales.js" type="text/javascript"></script>
     <script src="~/Scripts/bootstrap-colorpicker.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery-ui-1.11.4.js" type="text/javascript"></script>
+   
 
 
-    
+
 
  
 </head>
 <body>
-    <h2 class="text-center">Чат-комната<span class="glyphicon glyphicon-comment"></span></h2>
+    <h2 class="text-center"><span class="label label-default">Чат-комната</span></h2>
     <script type="text/javascript">
         tinymce.init({
             theme: "modern", selector: "#message",
             height: "50",
             width: "200",
-            plugins: "image, textcolor, emoticons, colorpicker, media, example",
-            toolbar: "emoticons,| forecolor backcolor,| example"
+            plugins: "image, textcolor, emoticons, colorpicker, media, example, MyDraw ",
+            toolbar: "emoticons,| forecolor backcolor,| example,| Draw"
 
 
 
         });
     </script>
 
-    <div class="row">
+    <div class="row"  >
+     
 
+
+        
 
         <div class="col-md-4 col-md-offset-1">
 
-            <div class="main">
+            <div class="main" >
 
 
                 <div class="input-group" id="loginBlock" style="width:55%">
@@ -71,7 +81,7 @@
                 <div id="chatBody">
                     <div id="header"></div>
 
-                    <div id="chatroom" class="layer"></div>
+                    <div id="chatroom"  class="layer"></div>
 
                     <div id="inputForm">
 
@@ -88,33 +98,43 @@
                 <input id="username" type="hidden" />
 
             </div>
-
+           
 
         </div>
-        <div id="chatusers" class="col-md-3">
-            <p>
-                <b>Все пользователи <span class="badge" id="users_quantity"></span> :<br /> </b>
-                <span id="notification" style="color:#c93d19;font-size:15px;"></span>
-            </p>
+        <div  class="col-md-3">
+            <div id="chatusers">
+                <p>
+                    <b>Все пользователи <span class="badge" id="users_quantity"></span> :<br /> </b>
+                    <span id="notification" style="color:#c93d19;font-size:15px;"></span>
+                </p>
+            </div>
+            <div id="divContainer"></div>
         </div>
+        
         <div class="col-md-4 ">
             <div id="canvasBlock">
                 <br />
                 <canvas id='drawingpad' width='400' height='250' style="border: 1px solid #000000;"></canvas>
                 <br />
                 <p id="drawuser"></p>
-                <button type="button" value="Линия" class="btn btn-inverse" id="line"><span class="glyphicon glyphicon-pencil"></span></button>
+                <button type="button" value="Линия" class="btn btn-inverse" id="line" ><span class="glyphicon glyphicon-pencil"></span></button>
                 <button type="button" value="Квадрат" class="btn btn-inverse" id="square"><span class="glyphicon glyphicon-stop"></span></button>
                 <button type="button" value="Очистить" class="btn btn-inverse" id="btnclear"><span class="glyphicon glyphicon-trash"></span></button>
-
+                
+               
+                   
+                
 
                 <fieldset>
-                    <legend>Color</legend>
+                    <legend>Settings</legend>
                     <div class="input-group" id="colorcanvas" style="width:50%">
                         <input type="text" value="#000000" class="form-control" id="colormeaning" />
                         <span class="input-group-addon" id="colorchoice"><i></i></span>
                     </div>
+                    <br />
+                  
                 </fieldset>
+               
 
 
             </div>
@@ -122,13 +142,15 @@
         </div>
 
     </div>
-
+   
 
 
             @*аудио*@
             <audio src="~/Sounds/user_out.wav" id="user_out"> </audio>
             <audio src="~/Sounds/user_in.wav" id="user_in"> </audio>
             <audio src="~/Sounds/message.wav" id="message_in"> </audio>
+           <audio src="~/Sounds/private_message.mp3" id="private_message"> </audio>
+
 
 </body>
 
